# SmokeAPI

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  PULL_REQUEST.md  README.adoc  README.md  README.template.md  build.ps1  sync.json
.github/workflows/: build.yml  ci.yml  dev-build.yml  kb-build.yml  kb-release.yml  matrix-build.yml  tag-release.yml
docs/: building_from_source.md  tools.md
res/: README.txt  SmokeAPI.config.json  SmokeAPI.json  SmokeAPI.schema.json  extra_build_config.gen.h  interface_lookup.json
res/dummy/: README.md
res/steamworks/: README.md
res/steamworks/100/headers/: isteamnetworking.h  isteamutils.h  steam_api.h  steam_gameserver.h  steamclientpublic.h
res/steamworks/101/headers/: isteamclient.h  isteamfriends.h  isteamgameserver.h  isteammatchmaking.h  isteamuserstats.h  matchmakingtypes.h  steam_api.h  steamtypes.h
res/steamworks/102/headers/: isteamapps.h  isteamclient.h  isteamfriends.h  isteamuser.h  isteamutils.h  steam_api.h
res/steamworks/103/headers/: isteamfriends.h  isteamgameserver.h  isteamremotestorage.h  isteamutils.h  matchmakingtypes.h
res/steamworks/104/headers/: isteamclient.h  isteamgameserver.h  isteamuser.h  steam_api.h
res/steamworks/105/headers/: isteammatchmaking.h  steam_api.h
res/steamworks/106/headers/: isteamclient.h  isteamfriends.h  isteammatchmaking.h  isteamnetworking.h  matchmakingtypes.h  steam_api.h
res/steamworks/107/headers/: isteamuserstats.h  steam_api.h
res/steamworks/108/headers/: isteamgameserver.h  isteamuserstats.h  matchmakingtypes.h  steam_api.h  steamclientpublic.h  steamtypes.h
res/steamworks/109/headers/: isteamclient.h  isteamuser.h  isteamutils.h  steamclientpublic.h
res/steamworks/110/headers/: isteamapps.h  isteamfriends.h  isteamgameserver.h  isteamnetworking.h  isteamutils.h  steam_api.h  steamclientpublic.h  steamtypes.h
res/steamworks/111/headers/: isteamclient.h  isteamuser.h  steam_api.h  steamclientpublic.h
res/steamworks/112/headers/: isteamapps.h  isteamfriends.h  isteammasterserverupdater.h  isteamremotestorage.h  isteamuserstats.h  isteamutils.h  steamclientpublic.h
res/steamworks/113/headers/: isteamclient.h  isteamgameserver.h  isteamuserstats.h  matchmakingtypes.h  steam_api.h  steamclientpublic.h
res/steamworks/114/headers/: isteamremotestorage.h  isteamuser.h  steam_gameserver.h  steamps3params.h
src/: main.cpp  main_linux.cpp  main_win.cpp  smoke_api.cpp  smoke_api.hpp  steamclient.cpp
src/common/: app_cache.cpp  steamclient_exports.cpp  steamclient_exports.hpp
src/core/: api.cpp  api.hpp  cache.cpp  cache.hpp  config.cpp  config.hpp  globals.cpp  globals.hpp  macros.hpp  paths.cpp  paths.hpp  steam_types.hpp  types.cpp  types.hpp
src/exports/: steam_api.cpp  steam_api_flat.cpp  steam_api_internal.cpp  steam_api_unversioned.cpp  steamclient.cpp  steamclient.hpp
src/game_mode/exports/: steam_api.cpp  steam_api_flat.cpp  steam_api_internal.cpp  steam_api_unversioned.cpp
src/game_mode/virtuals/: isteamapps.cpp  isteamclient.cpp  isteaminventory.cpp  isteamuser.cpp  steam_api_virtuals.hpp
src/koalageddon/: cache.cpp  cache.hpp  kg_cache.cpp  kg_cache.hpp  koalageddon.cpp  koalageddon.hpp  steamclient.cpp  steamclient.hpp  types.hpp  vstdlib.cpp  vstdlib.hpp
src/koalageddon/steamclient/: client_app_manager.cpp  client_apps.cpp  client_inventory.cpp  client_user.cpp  client_utils.cpp  steamclient.cpp  steamclient.hpp
src/smoke_api/: api.cpp  api.hpp  app_cache.cpp  app_cache.hpp  cache.cpp  cache.hpp  config.cpp  config.hpp  globals.cpp  globals.hpp  smoke_api.cpp  smoke_api.hpp  types.cpp  types.hpp
src/steam_api/: steam_api_flat.cpp  steam_client.cpp  steam_client.hpp  steam_interface.cpp  steam_interface.hpp  steam_interfaces.cpp  steam_interfaces.hpp
src/steam_api/exports/: steam_api.cpp  steam_api.hpp  steam_api_flat.cpp  steam_api_internal.cpp  steam_api_unversioned.cpp
src/steam_api/virtuals/: isteamapps.cpp  isteamclient.cpp  isteamgameserver.cpp  isteamhttp.cpp  isteaminventory.cpp  isteamuser.cpp  isteamuserstats.cpp  isteamutils.cpp  steam_api_virtuals.hpp
src/steam_api_exports/: steam_api_exports.hpp  steam_api_flat.cpp  steam_api_internal.cpp  steam_api_unversioned.cpp
src/steam_api_virtuals/: isteamapps.cpp  isteamclient.cpp  isteaminventory.cpp  isteamuser.cpp
src/steam_functions/: steam_functions.cpp  steam_functions.hpp
src/steam_impl/: steam_apps.cpp  steam_apps.hpp  steam_client.cpp  steam_client.hpp  steam_game_server.cpp  steam_game_server.hpp  steam_impl.cpp  steam_impl.hpp  steam_inventory.cpp  steam_inventory.hpp  steam_user.cpp  steam_user.hpp
src/steam_interface/: steam_apps.cpp  steam_apps.hpp  steam_client.cpp  steam_client.hpp  steam_interface.cpp  steam_interface.hpp  steam_inventory.cpp  steam_inventory.hpp  steam_user.cpp  steam_user.hpp
src/steam_types/: steam_types.hpp
src/steamclient/: steamclient.cpp  steamclient.hpp
src/steamclient_exports/: steamclient.cpp
src/steamclient_virtuals/: client_app_manager.cpp  client_apps.cpp  client_inventory.cpp  client_user.cpp
src/store_mode/: store.cpp  store.hpp  store_api.cpp  store_api.hpp  store_cache.cpp  store_cache.hpp
src/store_mode/steamclient/: client_app_manager.cpp  client_apps.cpp  client_inventory.cpp  client_user.cpp  client_utils.cpp  steamclient.cpp  steamclient.hpp
src/store_mode/vstdlib/: vstdlib.cpp  vstdlib.hpp
src/virtuals/: isteamapps.cpp  isteamclient.cpp  isteaminventory.cpp  isteamuser.cpp  steam_api_virtuals.hpp
src/vstdlib/: vstdlib.cpp
static/smoke_api/: api.cpp  api.hpp  cache.cpp  cache.hpp  config.cpp  config.hpp  types.cpp  types.hpp
static/smoke_api/interfaces/: steam_apps.cpp  steam_apps.hpp  steam_http.cpp  steam_http.hpp  steam_inventory.cpp  steam_inventory.hpp  steam_user.cpp  steam_user.hpp  steam_user_stats.cpp  steam_user_stats.hpp
static/smoke_api/steamclient/: steamclient.hpp
tools/: CMakeLists.txt  README.md  steamworks_downloader.cpp  steamworks_parser.cpp
tools/src/: steamworks_downloader.cpp  steamworks_parser.cpp
(+248 files in other folders)
